// 使用proto3语法
syntax = "proto3";

// 定义go文件生成位置和包名
option go_package = ".;service";

service SayHello {
  rpc SayHello(helloRequest) returns (HelloRespose) {}
}

message helloRequest {
  string requestName = 1;
  // int64 age = 2;
}

message HelloRespose { string resposeMsg = 1; }